# checkmailauthenticationtool

./: README.md  current_results.csv  domains.csv  mail_results.json  pyproject.toml
.github/workflows/: main.yml
checkmailauthenticationtool/: check_dmarc.py
code/: check_dmarc.py
files/: current_results.csv  current_results.json  domains.csv  output.txt
tests/mocks/: domains1.json
